# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md
backend/: README.md  pyproject.toml
backend/src/backend/: cli.py  cli.py.backup  main.py  models.py  services.py  utils.py
backend/tests/unit/: test_models.py  test_services.py  test_ui.py  test_utils.py
history/adr/: 0001-phase-i-storage-strategy.md  0002-architecture-evolution-approach.md  0003-constitution-exception-management.md
phase-1/backend/: MIGRATION.md
phase-2/: .gitignore  README.md
phase-2/backend/: .env.example  .gitignore  README.md  pyproject.toml
phase-2/backend/scripts/: add_indexes.py  init_db.py  integration_test.py  test_backend.py
phase-2/backend/src/backend/: __init__.py  config.py  database.py  exceptions.py  main.py
phase-2/backend/src/backend/auth/: __init__.py  jwt.py
phase-2/backend/src/backend/middleware/: __init__.py  auth.py
phase-2/backend/src/backend/models/: __init__.py  task.py
phase-2/backend/src/backend/routes/: __init__.py  profile.py  tasks.py
phase-2/frontend/: .env.demo  DEMO.md  README.md  auth.config.ts  create-tables.js  fix-tables.js  package-lock.json  package.json  setup-demo.sh  tailwind.config.ts  test-demo.js
specs/001-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-menu-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-nextjs-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-frontend-auth/: data-model.md  plan.md  quickstart.md  (+3 more)
(+150 files in other folders)
